# Enzyme

./: .gitignore  Readme.md
.devcontainer/: devcontainer.json
.github/workflows/: benchmark.yml  ccpp.yml  enzyme-ci.yml
enzyme/: .bazelrc  BUILD.bazel  CMakeLists.txt  WORKSPACE.bazel  bazel-bin  bazel-enzyme  bazel-out  bazel-testlogs
enzyme/Enzyme/: ActivityAnalysis.cpp  ActivityAnalysisPrinter.cpp  AdjointGenerator.h  Annotations.h  BUILD.bazel  CApi.cpp  CacheUtility.cpp  DifferentialUseAnalysis.h  Enzyme.cpp  EnzymeLogic.cpp  EnzymeLogic.h  FunctionUtils.cpp  FunctionUtils.h  GradientUtils.cpp  GradientUtils.h  InstructionBatcher.h  LibraryFuncs.h  Utils.cpp  Utils.h  replace.bzl
enzyme/Enzyme/MLIR/Interfaces/: GradientUtils.cpp
enzyme/Enzyme/TypeAnalysis/: TypeAnalysis.cpp  TypeAnalysisPrinter.cpp
enzyme/benchmarks/: CMakeLists.txt
enzyme/benchmarks/ReverseMode/adbench/: gmm.h  lstm.h
enzyme/benchmarks/blas/: Makefile  helper.h
enzyme/test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
enzyme/test/Enzyme/: CMakeLists.txt
enzyme/test/Enzyme/ForwardMode/: CMakeLists.txt  sqrelu.ll  sqrt.ll
enzyme/test/Enzyme/ForwardModeVector/: sqrelu.ll
enzyme/test/Enzyme/ForwardModeVector/VectorizedAtLeafNodes/: Faddeeva_erf.ll  badcallused.ll  calloc.ll  cosh.ll  divreduce.ll  exp10.ll  fabs.ll  ge.ll  global.ll  globalfn.ll  globallower.ll  hypot.ll  insertvalue.ll  intsum.ll  log10.ll  log1p.ll  log2.ll  maskedload.ll  maskedstore.ll  memcpy-flt.ll  memcpy-instruct.ll  memcpy-ptr.ll  negbithack.ll  negbithack2.ll  negbithack3.ll  ptr-eq.ll  relu.ll  sqrelu.ll  sqrt.ll  square2.ll  sret12.ll  storeconstexpr.ll  sumsquare.ll  sumwithbreak.ll  vecsquare.ll  vector_reduce_fadd.ll
enzyme/utils/: update_test_checks.py
enzyme/utils/UpdateTestChecks/: common.py
