load("@llvm-raw//utils/bazel/llvm-project-overlay/llvm:cc_plugin_library.bzl", "cc_plugin_library")


cc_plugin_library(
    name = "LLVMEnzyme",
    srcs = glob(["**/*.cpp"]),
    hdrs = glob(["**/*.h"]),
    deps = [
        "@llvm-project//llvm:Analysis",
        "@llvm-project//llvm:Core",
        "@llvm-project//llvm:Support",
        "@llvm-project//llvm:config",
        ],
)